# bevy_cleanup

./: Cargo.toml  README.md
bevy_cleanup_derive/: Cargo.toml
bevy_cleanup_derive/src/: lib.rs
examples/: game.rs
src/: lib.rs
